# demo_backend_TO

./: .env.example  .gitignore  Cargo.toml  TEST_CREDENTIALS.md  diesel.toml  remove_emojis.py
docs/: ARCHITECTURE.md  GUIA_PRINCIPIANTES.md
documentation/: CONTABILIDAD_DESIGN.md  GEOLOCATION_IMPLEMENTATION.md  GUIA_CONTABILIDAD.md
migrations/2025-12-20-000001_create_document_types/: down.sql  up.sql
migrations/2025-12-20-000002_create_users/: down.sql  up.sql
migrations/2025-12-20-000003_create_user_documents/: down.sql  up.sql
migrations/2025-12-20-000004_create_user_sessions/: down.sql  up.sql
migrations/2025-12-20-000005_create_security_tables/: down.sql  up.sql
migrations/2025-12-20-000006_add_last_activity_to_sessions/: down.sql  up.sql
migrations/2025-12-20-000007_seed_test_users/: down.sql  up.sql
migrations/2025-12-24-000001_create_personas/: down.sql  up.sql
migrations/2025-12-24-000002_create_agencias/: down.sql  up.sql
migrations/2025-12-24-000003_create_tours/: down.sql  up.sql
migrations/2025-12-24-000004_create_transportes/: down.sql  up.sql
migrations/2025-12-24-000005_create_vehiculos/: down.sql  up.sql
migrations/2025-12-24-000006_create_conductores/: down.sql  up.sql
migrations/2025-12-24-000007_create_guias/: down.sql  up.sql
migrations/2025-12-24-000008_create_restaurantes/: down.sql  up.sql
migrations/2025-12-24-000009_create_entradas/: down.sql  up.sql
migrations/2025-12-24-000010_create_files/: down.sql  up.sql
migrations/2025-12-24-000011_create_pagos/: down.sql  up.sql
migrations/2025-12-24-000012_add_entidad_to_users/: down.sql  up.sql
migrations/2025-12-26-000001_restructure_users/: down.sql  up.sql
migrations/2025-12-26-000002_remove_unused_tables/: down.sql  up.sql
migrations/2025-12-27-000001_base_functions/: up.sql
migrations/2025-12-27-000002_create_personas/: down.sql  (+1 more)
src/: main.rs
(+578 files in other folders)
