[package]
name = "secure-auth-api"
version = "0.1.0"
edition = "2021"
authors = ["Development Team"]
description = "API de autenticación ultra-segura con arquitectura hexagonal"

[[bin]]
name = "secure-auth-api"
path = "src/main.rs"

[dependencies]
# Web Framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "limit", "compression-gzip", "request-id", "set-header"] }
tower-cookies = "0.11"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Database - Async con Deadpool
diesel = { version = "2.2", features = ["postgres", "uuid", "chrono", "serde_json"] }
diesel-async = { version = "0.5", features = ["postgres", "deadpool"] }
deadpool = "0.12"
diesel_migrations = "2.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Security - Solo cookies de sesión, sin JWT
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
hmac = "0.12"
subtle = "2.5"

# Rate Limiting
governor = "0.8"

# Environment
dotenvy = "0.15"

# Async traits
async-trait = "0.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }

# Validation
validator = { version = "0.18", features = ["derive"] }
regex = "1.10"

# HTTP types
http = "1.0"

# Type sharing with frontend
ts-rs = { version = "10", features = ["chrono-impl", "uuid-impl", "serde-compat"] }

[dev-dependencies]
tokio-test = "0.4"
